# xde-styles

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.in  README  README.in  README.md  README.md.in  RELEASE.md  THANKS  THANKS.in  TODO  autogen.sh  configure.ac  configure.template  index.md
adwm/styles/Squared-blue/: keysrc  stylerc
adwm/styles/Squared-cadet/: keysrc  stylerc
adwm/styles/Squared-cadet/pixmaps/: close_focused.xpm  close_hovered.xpm  close_pressed.xpm  close_unfocus.xpm  float_focused.xpm  float_hovered.xpm  float_pressed.xpm  float_unfocus.xpm  lback_focused.xpm  lback_hovered.xpm  lback_pressed.xpm  lback_unfocus.xpm  lhalf_focused.xpm  lhalf_hovered.xpm  lhalf_pressed.xpm  lhalf_unfocus.xpm  max_focused.xpm  max_hovered.xpm  max_pressed.xpm  max_unfocus.xpm  menu_focused.xpm  menu_hovered.xpm  menu_pressed.xpm  menu_unfocus.xpm  min_focused.xpm  min_hovered.xpm  min_pressed.xpm  min_unfocus.xpm  rback_focused.xpm  rback_hovered.xpm  rback_pressed.xpm  rback_unfocus.xpm  rhalf_focused.xpm  rhalf_hovered.xpm  rhalf_pressed.xpm  rhalf_unfocus.xpm  shade_focused.xpm  shade_hovered.xpm  shade_pressed.xpm  shade_unfocus.xpm  (+24 more)
adwm/styles/Squared-green/: keysrc  stylerc
adwm/styles/Squared-green/pixmaps/: close_focused.xpm  close_hovered.xpm  close_pressed.xpm  close_unfocus.xpm  float_focused.xpm  float_hovered.xpm  float_pressed.xpm  float_unfocus.xpm  lback_focused.xpm  lback_hovered.xpm  lback_pressed.xpm  lback_unfocus.xpm  lhalf_focused.xpm  lhalf_hovered.xpm  lhalf_pressed.xpm  lhalf_unfocus.xpm  max_focused.xpm  max_hovered.xpm  max_pressed.xpm  max_unfocus.xpm  menu_focused.xpm  menu_hovered.xpm  menu_pressed.xpm  menu_unfocus.xpm  min_focused.xpm  min_hovered.xpm  min_pressed.xpm  min_unfocus.xpm  rback_focused.xpm  rback_hovered.xpm  rback_pressed.xpm  rback_unfocus.xpm  rhalf_focused.xpm  rhalf_hovered.xpm  rhalf_pressed.xpm  rhalf_unfocus.xpm  shade_focused.xpm  shade_hovered.xpm  shade_pressed.xpm  shade_unfocus.xpm  (+24 more)
adwm/styles/Squared-grey/: keysrc  stylerc  stylrc1
adwm/styles/Squared-grey/pixmaps/: close_focused.xpm  close_hovered.xpm  close_pressed.xpm  close_unfocus.xpm  float_focused.xpm  float_hovered.xpm  float_pressed.xpm  float_unfocus.xpm  lback_focused.xpm  lback_hovered.xpm  lback_pressed.xpm  lback_unfocus.xpm  lhalf_focused.xpm  lhalf_hovered.xpm  lhalf_pressed.xpm  lhalf_unfocus.xpm  max_focused.xpm  max_hovered.xpm  max_pressed.xpm  max_unfocus.xpm  menu_focused.xpm  menu_hovered.xpm  menu_pressed.xpm  (+41 more)
gtk/: Makefile.am
gtk/themes/Squared-blue/gtk-2.0/: gtkrc  window-above.xpm  window-below.xpm  window-border.xpm  window-close.xpm  window-command.xpm  window-floating.xpm  window-focus.xpm  window-kill.xpm  window-lower.xpm  window-maximize-b.xpm  window-maximize-h.xpm  window-maximize-l.xpm  window-maximize-r.xpm  window-maximize-v.xpm  window-maximize.xpm  window-maximus-l.xpm  window-maximus-r.xpm  window-menu.xpm  window-minimize.xpm  window-move.xpm  window-normal.xpm  window-notitlebar.xpm  window-raise.xpm  window-resize.xpm  window-sendto-d.xpm  window-sendto-l.xpm  window-sendto-r.xpm  window-sendto-u.xpm  window-sendto.xpm  window-shade.xpm  window-snap.xpm  window-stick.xpm  window-tiled.xpm  window-titlebar.xpm  window-unmaximize-b.xpm  window-unmaximize-h.xpm  window-unmaximize-l.xpm  window-unmaximize-r.xpm  window-unmaximize-v.xpm  (+6 more)
gtk/themes/Squared-cadet/gtk-2.0/: gtkrc  window-above.xpm  window-below.xpm  window-border.xpm  window-close.xpm  window-command.xpm  window-floating.xpm  window-focus.xpm  window-kill.xpm  window-lower.xpm  window-maximize-b.xpm  window-maximize-h.xpm  window-maximize-l.xpm  window-maximize-r.xpm  window-maximize-v.xpm  window-maximize.xpm  window-maximus-l.xpm  window-maximus-r.xpm  window-menu.xpm  window-minimize.xpm  window-move.xpm  window-normal.xpm  window-notitlebar.xpm  window-raise.xpm  window-resize.xpm  window-sendto-d.xpm  window-sendto-l.xpm  window-sendto-r.xpm  window-sendto-u.xpm  window-sendto.xpm  window-shade.xpm  window-snap.xpm  window-stick.xpm  window-tiled.xpm  window-titlebar.xpm  window-unmaximize-b.xpm  window-unmaximize-h.xpm  window-unmaximize-l.xpm  window-unmaximize-r.xpm  window-unmaximize-v.xpm  (+6 more)
gtk/themes/Squared-green/gtk-2.0/: gtkrc  window-above.xpm  window-below.xpm  window-border.xpm  window-close.xpm  window-command.xpm  window-floating.xpm  window-focus.xpm  window-kill.xpm  window-lower.xpm  window-maximize-b.xpm  window-maximize-h.xpm  window-maximize-l.xpm  window-maximize-r.xpm  window-maximize-v.xpm  window-maximize.xpm  window-maximus-l.xpm  window-maximus-r.xpm  window-menu.xpm  window-minimize.xpm  window-move.xpm  window-normal.xpm  window-notitlebar.xpm  window-raise.xpm  window-resize.xpm  window-sendto-d.xpm  window-sendto-l.xpm  window-sendto-r.xpm  window-sendto-u.xpm  window-sendto.xpm  window-shade.xpm  window-snap.xpm  window-stick.xpm  window-tiled.xpm  window-titlebar.xpm  window-unmaximize-b.xpm  window-unmaximize-h.xpm  window-unmaximize-l.xpm  window-unmaximize-r.xpm  window-unmaximize-v.xpm  (+6 more)
gtk/themes/Squared-grey/gtk-2.0/: gtkrc  window-above.xpm  window-below.xpm  window-border.xpm  window-close.xpm  window-command.xpm  window-floating.xpm  window-focus.xpm  window-kill.xpm  window-lower.xpm  window-maximize-b.xpm  window-maximize-h.xpm  window-maximize-l.xpm  window-maximize-r.xpm  window-maximize-v.xpm  window-maximize.xpm  window-maximus-l.xpm  window-maximus-r.xpm  window-menu.xpm  window-minimize.xpm  window-move.xpm  window-normal.xpm  window-notitlebar.xpm  window-raise.xpm  window-resize.xpm  window-sendto-d.xpm  window-sendto-l.xpm  window-sendto-r.xpm  window-sendto-u.xpm  window-sendto.xpm  window-shade.xpm  window-snap.xpm  window-stick.xpm  window-tiled.xpm  window-titlebar.xpm  window-unmaximize-b.xpm  window-unmaximize-h.xpm  window-unmaximize-l.xpm  window-unmaximize-r.xpm  window-unmaximize-v.xpm  (+6 more)
twm/: keys
twm/styles/Squared/: _stylerc
uwm/styles/Squared-blue/: theme
uwm/styles/Squared-cadet/: theme
uwm/styles/Squared-green/: theme
uwm/styles/Squared-grey/: theme
(+16 files in other folders)
