
nobase_dist_data_DATA = \
	themes/Squared-cadet/gtk-2.0/gtkrc \
	themes/Squared-cadet/gtk-2.0/window-above.png \
	themes/Squared-cadet/gtk-2.0/window-below.png \
	themes/Squared-cadet/gtk-2.0/window-border.png \
	themes/Squared-cadet/gtk-2.0/window-close.png \
	themes/Squared-cadet/gtk-2.0/window-command.png \
	themes/Squared-cadet/gtk-2.0/window-floating.png \
	themes/Squared-cadet/gtk-2.0/window-focus.png \
	themes/Squared-cadet/gtk-2.0/window-kill.png \
	themes/Squared-cadet/gtk-2.0/window-lower.png \
	themes/Squared-cadet/gtk-2.0/window-maximize-b.png \
	themes/Squared-cadet/gtk-2.0/window-maximize-h.png \
	themes/Squared-cadet/gtk-2.0/window-maximize.png \
	themes/Squared-cadet/gtk-2.0/window-maximize-v.png \
	themes/Squared-cadet/gtk-2.0/window-maximus-l.png \
	themes/Squared-cadet/gtk-2.0/window-maximus-r.png \
	themes/Squared-cadet/gtk-2.0/window-menu.png \
	themes/Squared-cadet/gtk-2.0/window-minimize.png \
	themes/Squared-cadet/gtk-2.0/window-move.png \
	themes/Squared-cadet/gtk-2.0/window-normal.png \
	themes/Squared-cadet/gtk-2.0/window-notitlebar.png \
	themes/Squared-cadet/gtk-2.0/window-raise.png \
	themes/Squared-cadet/gtk-2.0/window-resize.png \
	themes/Squared-cadet/gtk-2.0/window-sendto-d.png \
	themes/Squared-cadet/gtk-2.0/window-sendto-l.png \
	themes/Squared-cadet/gtk-2.0/window-sendto.png \
	themes/Squared-cadet/gtk-2.0/window-sendto-r.png \
	themes/Squared-cadet/gtk-2.0/window-sendto-u.png \
	themes/Squared-cadet/gtk-2.0/window-shade.png \
	themes/Squared-cadet/gtk-2.0/window-snap.png \
	themes/Squared-cadet/gtk-2.0/window-stick.png \
	themes/Squared-cadet/gtk-2.0/window-tiled.png \
	themes/Squared-cadet/gtk-2.0/window-titlebar.png \
	themes/Squared-cadet/gtk-2.0/window-unmaximize-b.png \
	themes/Squared-cadet/gtk-2.0/window-unmaximize-h.png \
	themes/Squared-cadet/gtk-2.0/window-unmaximize.png \
	themes/Squared-cadet/gtk-2.0/window-unmaximize-v.png \
	themes/Squared-cadet/gtk-2.0/window-unmaximus-l.png \
	themes/Squared-cadet/gtk-2.0/window-unmaximus-r.png \
	themes/Squared-cadet/gtk-2.0/window-unminimize.png \
	themes/Squared-cadet/gtk-2.0/window-unshade.png \
	themes/Squared-cadet/gtk-2.0/window-unstick.png \
	themes/Squared-grey/gtk-2.0/gtkrc \
	themes/Squared-grey/gtk-2.0/window-above.png \
	themes/Squared-grey/gtk-2.0/window-below.png \
	themes/Squared-grey/gtk-2.0/window-border.png \
	themes/Squared-grey/gtk-2.0/window-close.png \
	themes/Squared-grey/gtk-2.0/window-command.png \
	themes/Squared-grey/gtk-2.0/window-floating.png \
	themes/Squared-grey/gtk-2.0/window-focus.png \
	themes/Squared-grey/gtk-2.0/window-kill.png \
	themes/Squared-grey/gtk-2.0/window-lower.png \
	themes/Squared-grey/gtk-2.0/window-maximize-b.png \
	themes/Squared-grey/gtk-2.0/window-maximize-h.png \
	themes/Squared-grey/gtk-2.0/window-maximize.png \
	themes/Squared-grey/gtk-2.0/window-maximize-v.png \
	themes/Squared-grey/gtk-2.0/window-maximus-l.png \
	themes/Squared-grey/gtk-2.0/window-maximus-r.png \
	themes/Squared-grey/gtk-2.0/window-menu.png \
	themes/Squared-grey/gtk-2.0/window-minimize.png \
	themes/Squared-grey/gtk-2.0/window-move.png \
	themes/Squared-grey/gtk-2.0/window-normal.png \
	themes/Squared-grey/gtk-2.0/window-notitlebar.png \
	themes/Squared-grey/gtk-2.0/window-raise.png \
	themes/Squared-grey/gtk-2.0/window-resize.png \
	themes/Squared-grey/gtk-2.0/window-sendto-d.png \
	themes/Squared-grey/gtk-2.0/window-sendto-l.png \
	themes/Squared-grey/gtk-2.0/window-sendto.png \
	themes/Squared-grey/gtk-2.0/window-sendto-r.png \
	themes/Squared-grey/gtk-2.0/window-sendto-u.png \
	themes/Squared-grey/gtk-2.0/window-shade.png \
	themes/Squared-grey/gtk-2.0/window-snap.png \
	themes/Squared-grey/gtk-2.0/window-stick.png \
	themes/Squared-grey/gtk-2.0/window-tiled.png \
	themes/Squared-grey/gtk-2.0/window-titlebar.png \
	themes/Squared-grey/gtk-2.0/window-unmaximize-b.png \
	themes/Squared-grey/gtk-2.0/window-unmaximize-h.png \
	themes/Squared-grey/gtk-2.0/window-unmaximize.png \
	themes/Squared-grey/gtk-2.0/window-unmaximize-v.png \
	themes/Squared-grey/gtk-2.0/window-unmaximus-l.png \
	themes/Squared-grey/gtk-2.0/window-unmaximus-r.png \
	themes/Squared-grey/gtk-2.0/window-unminimize.png \
	themes/Squared-grey/gtk-2.0/window-unshade.png \
	themes/Squared-grey/gtk-2.0/window-unstick.png \
	themes/Squared-green/gtk-2.0/gtkrc \
	themes/Squared-green/gtk-2.0/window-above.png \
	themes/Squared-green/gtk-2.0/window-below.png \
	themes/Squared-green/gtk-2.0/window-border.png \
	themes/Squared-green/gtk-2.0/window-close.png \
	themes/Squared-green/gtk-2.0/window-command.png \
	themes/Squared-green/gtk-2.0/window-floating.png \
	themes/Squared-green/gtk-2.0/window-focus.png \
	themes/Squared-green/gtk-2.0/window-kill.png \
	themes/Squared-green/gtk-2.0/window-lower.png \
	themes/Squared-green/gtk-2.0/window-maximize-b.png \
	themes/Squared-green/gtk-2.0/window-maximize-h.png \
	themes/Squared-green/gtk-2.0/window-maximize.png \
	themes/Squared-green/gtk-2.0/window-maximize-v.png \
	themes/Squared-green/gtk-2.0/window-maximus-l.png \
	themes/Squared-green/gtk-2.0/window-maximus-r.png \
	themes/Squared-green/gtk-2.0/window-menu.png \
	themes/Squared-green/gtk-2.0/window-minimize.png \
	themes/Squared-green/gtk-2.0/window-move.png \
	themes/Squared-green/gtk-2.0/window-normal.png \
	themes/Squared-green/gtk-2.0/window-notitlebar.png \
	themes/Squared-green/gtk-2.0/window-raise.png \
	themes/Squared-green/gtk-2.0/window-resize.png \
	themes/Squared-green/gtk-2.0/window-sendto-d.png \
	themes/Squared-green/gtk-2.0/window-sendto-l.png \
	themes/Squared-green/gtk-2.0/window-sendto.png \
	themes/Squared-green/gtk-2.0/window-sendto-r.png \
	themes/Squared-green/gtk-2.0/window-sendto-u.png \
	themes/Squared-green/gtk-2.0/window-shade.png \
	themes/Squared-green/gtk-2.0/window-snap.png \
	themes/Squared-green/gtk-2.0/window-stick.png \
	themes/Squared-green/gtk-2.0/window-tiled.png \
	themes/Squared-green/gtk-2.0/window-titlebar.png \
	themes/Squared-green/gtk-2.0/window-unmaximize-b.png \
	themes/Squared-green/gtk-2.0/window-unmaximize-h.png \
	themes/Squared-green/gtk-2.0/window-unmaximize.png \
	themes/Squared-green/gtk-2.0/window-unmaximize-v.png \
	themes/Squared-green/gtk-2.0/window-unmaximus-l.png \
	themes/Squared-green/gtk-2.0/window-unmaximus-r.png \
	themes/Squared-green/gtk-2.0/window-unminimize.png \
	themes/Squared-green/gtk-2.0/window-unshade.png \
	themes/Squared-green/gtk-2.0/window-unstick.png \
	themes/Squared-blue/gtk-2.0/gtkrc \
	themes/Squared-blue/gtk-2.0/window-above.png \
	themes/Squared-blue/gtk-2.0/window-below.png \
	themes/Squared-blue/gtk-2.0/window-border.png \
	themes/Squared-blue/gtk-2.0/window-close.png \
	themes/Squared-blue/gtk-2.0/window-command.png \
	themes/Squared-blue/gtk-2.0/window-floating.png \
	themes/Squared-blue/gtk-2.0/window-focus.png \
	themes/Squared-blue/gtk-2.0/window-kill.png \
	themes/Squared-blue/gtk-2.0/window-lower.png \
	themes/Squared-blue/gtk-2.0/window-maximize-b.png \
	themes/Squared-blue/gtk-2.0/window-maximize-h.png \
	themes/Squared-blue/gtk-2.0/window-maximize.png \
	themes/Squared-blue/gtk-2.0/window-maximize-v.png \
	themes/Squared-blue/gtk-2.0/window-maximus-l.png \
	themes/Squared-blue/gtk-2.0/window-maximus-r.png \
	themes/Squared-blue/gtk-2.0/window-menu.png \
	themes/Squared-blue/gtk-2.0/window-minimize.png \
	themes/Squared-blue/gtk-2.0/window-move.png \
	themes/Squared-blue/gtk-2.0/window-normal.png \
	themes/Squared-blue/gtk-2.0/window-notitlebar.png \
	themes/Squared-blue/gtk-2.0/window-raise.png \
	themes/Squared-blue/gtk-2.0/window-resize.png \
	themes/Squared-blue/gtk-2.0/window-sendto-d.png \
	themes/Squared-blue/gtk-2.0/window-sendto-l.png \
	themes/Squared-blue/gtk-2.0/window-sendto.png \
	themes/Squared-blue/gtk-2.0/window-sendto-r.png \
	themes/Squared-blue/gtk-2.0/window-sendto-u.png \
	themes/Squared-blue/gtk-2.0/window-shade.png \
	themes/Squared-blue/gtk-2.0/window-snap.png \
	themes/Squared-blue/gtk-2.0/window-stick.png \
	themes/Squared-blue/gtk-2.0/window-tiled.png \
	themes/Squared-blue/gtk-2.0/window-titlebar.png \
	themes/Squared-blue/gtk-2.0/window-unmaximize-b.png \
	themes/Squared-blue/gtk-2.0/window-unmaximize-h.png \
	themes/Squared-blue/gtk-2.0/window-unmaximize.png \
	themes/Squared-blue/gtk-2.0/window-unmaximize-v.png \
	themes/Squared-blue/gtk-2.0/window-unmaximus-l.png \
	themes/Squared-blue/gtk-2.0/window-unmaximus-r.png \
	themes/Squared-blue/gtk-2.0/window-unminimize.png \
	themes/Squared-blue/gtk-2.0/window-unshade.png \
	themes/Squared-blue/gtk-2.0/window-unstick.png

